--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,6 @@
 DB_URL = mongodb+srv://pinrozeth:fnhbh7HsuEwoMdUe@disc-cluster.g8kwlyu.mongodb.net/disc?retryWrites=true&w=majority
 SERVER_PORT = 3000
+
+
+JWT_SECRET = qwthsijwtolaksnvmcixospeuzvyhwtz
+JWT_EXPIRES_IN = 30d
