Finsih Authentication and GetByID

--- a/server/.env
+++ b/server/.env
@@ -3,6 +3,6 @@ SERVER_PORT = 3000
 
 
 JWT_SECRET = qwthsijwtolaksnvmcixospeuzvyhwtz
-JWT_EXPIRES_IN = 30d
+JWT_EXPIRES_IN = 2592000 #30days in to seconds
 
 FRONTEND_URL = http://localhost:4200
