--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,5 @@
 DB_URL = mongodb+srv://pinrozeth:fnhbh7HsuEwoMdUe@disc-cluster.g8kwlyu.mongodb.net/disc?retryWrites=true&w=majority
+MONGO_DB_PW = fnhbh7HsuEwoMdUe
 SERVER_PORT = 3000
 
 
