--- a/server/.env
+++ b/server/.env
@@ -6,4 +6,4 @@ SERVER_PORT = 3000
 JWT_SECRET = qwthsijwtolaksnvmcixospeuzvyhwtz
 JWT_EXPIRES_IN = 2592000 #30days in to seconds
 
-FRONTEND_URL = http://localhost:4200
+FRONTEND_URL = https://disc-e-commerce.vercel.app
